export styling improvemtns on header and popup .js and .css

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -31,10 +31,8 @@
   align-items: center;
 }
 
-.current-canvas {
+.current-canvas-wrapper {
   margin-left: 5px;
-  padding-right: 20px;
-  padding-left: 20px;
   background: rgba(255, 255, 255, 0.9) 0% 0% no-repeat padding-box;
   border-radius: 10px;
   opacity: 0.8;
@@ -46,12 +44,28 @@
   align-items: center;
 }
 
-.header-icon {
+.current-canvas-content {
+  margin-left: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.current-canvas-content img {
+  margin-right: 10px;
+}
+
+.canvas-name {
+  font-family: 'quebecregular', Helvetica, Sans-Serif;
+  font-weight: normal;
+  font-size: 18px;
+  margin-bottom: 7px;
+  margin-right: 20px;
+}
+
+.divider-line {
+  border-right: 1px solid #D9D9D9;
   height: 24px;
-  margin: 0px;
-  display: inline-block;
-  position: relative;
-  margin: 12px;
+  margin-right: 16px;
 }
 
 .logo p {
@@ -59,13 +73,6 @@
   letter-spacing: 0;
   color: black;
   margin-top: -10px;
-}
-
-.canvas-name {
-  font-family: 'quebecregular', Helvetica, Sans-Serif;
-  font-weight: normal;
-  font-size: 18px;
-  margin-bottom: 23px;
 }
 
 .logo-name {
@@ -216,7 +223,7 @@
 }
 
 .profile-wrapper {
-  margin-top: 70px;
+  margin-top: 62px;
   margin-right: 10px;
   float: right;
   border-radius: 14px;
@@ -266,7 +273,7 @@ button.gray img {
 }
 
 .user-status-wrapper {
-  margin-top: 70px;
+  margin-top: 62px;
   margin-right: 10px;
   float: right;
   border-radius: 14px;
@@ -277,8 +284,8 @@ button.gray img {
   flex-direction: column;
 }
 .export-wrapper {
-  margin-top: 70px;
-  margin-left: 300px;
+  margin-top: 62px;
+  margin-left: 274px;
   float: left;
   border-radius: 14px;
   background-color: #FFFFFF;
@@ -288,10 +295,12 @@ button.gray img {
   flex-direction: column;
 }
 .export-wrapper a {
-  padding: 10px 25px;
+  padding: 12px 25px;
   color: black;
   outline: none;
-
+  font-family: 'rennerbook', Helvetica, sans-serif;
+  font-weight: normal;
+  font-size: 14px;
   background: none;
   border: none;
   text-decoration: none;
@@ -299,17 +308,23 @@ button.gray img {
   display: flex;
   align-items: center;
 }
-.hover-display{
+
+.export-hover-display {
   margin-top: 60px;
-  margin-left: 305px;
+  margin-left: 320px;
   float: left;
   border-radius: 5px;
   color: white;
   background-color: #5F65FF;
-  padding: 6px 6px;
+  padding: 3px 6px 6px 6px;
   box-shadow: 0px 0px 6px #00000029;
   display: flex;
   flex-direction: column;
+  font-family: 'quebecsemibold', Helvetica, sans-serif;
+  font-weight: normal;
+  font-size: 10px;
+  z-index: 100;
+  
 }
 .export-wrapper a:hover {
   background: #F4F4F4 none repeat scroll 0% 0%;
