--- a/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
+++ b/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
@@ -3,10 +3,20 @@
     width: 496px;
 }
 
-.expanded_view_title {
-    padding-bottom: 20px;
+.expanded_view_title{
+    margin-bottom: 20px;
     font-size: 24px;
     color: #4D4D4D;
+}
+
+.expanded_view_title input { 
+    width: 100%;
+    outline: none;
+    border: none;
+    color: #4D4D4D;
+    font-size: 24px;
+    padding: 0;
+    font-family: 'rennerbook', Helvetica, Sans-Serif;
 }
 
 .expanded_view_tags {
