--- a/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
+++ b/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
@@ -1,49 +1,51 @@
 .expanded_view_content {
-    padding: 20px;
-    width: 496px;
+  padding: 20px;
+  width: 496px;
 }
 
-.expanded_view_title{
-    margin-bottom: 20px;
-    font-size: 24px;
-    color: #4D4D4D;
+.expanded_view_title {
+  margin-bottom: 20px;
+  font-size: 24px;
+  color: #4d4d4d;
 }
 
-.expanded_view_title input { 
-    width: 100%;
-    outline: none;
-    border: none;
-    color: #4D4D4D;
-    font-size: 24px;
-    padding: 0;
-    font-family: 'rennerbook', Helvetica, Sans-Serif;
+.expanded_view_title input {
+  width: 100%;
+  outline: none;
+  border: none;
+  color: #4d4d4d;
+  font-size: 24px;
+  padding: 0;
+  font-family: 'rennerbook', Helvetica, Sans-Serif;
 }
 
 .expanded_view_tags {
-    padding-bottom: 20px
+  padding-bottom: 20px;
 }
 
 .squirrels_timeframe_row {
-    display: flex;
-    flex-direction: row;
-    color: #717171;
-    padding-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  color: #717171;
+  padding-bottom: 20px;
 }
-
+.expanded_view_description textarea {
+  width: 100%;
+  height: 240px;
+}
 .expanded_view_squirrels {
-    display: inline-block;
-    width: 50%;
+  display: inline-block;
+  width: 50%;
 }
 
 .expanded_view_timeframe {
-    display: inline-block;
-    width: 50%;
+  display: inline-block;
+  width: 50%;
 }
 
-
 .expanded_view_description {
-    border: 1px solid #F2F2F2;
-    border-radius: 10px;
-    padding: 15px;
-    color: #A3A3A3;
+  border: 1px solid #f2f2f2;
+  border-radius: 10px;
+  padding: 15px;
+  color: #a3a3a3;
 }
