--- a/src/routes/PriorityView.css
+++ b/src/routes/PriorityView.css
@@ -6,6 +6,16 @@
   position: absolute;
 }
 
+.indented-view-wrapper {
+  width: 200px;
+  height: calc(100vh - 70px);
+  padding: 15px;
+  float: left;
+  background: #F2F2F2 0% 0% no-repeat padding-box;
+  box-shadow: 0px 0px 6px #00000038;
+  border-top-right-radius: 10px;
+}
+
 .priority-menu-wrapper {
   height: 52px;
   background: white;
