--- a/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
+++ b/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
@@ -32,6 +32,11 @@
 .expanded_view_description textarea {
   width: 100%;
   height: 240px;
+  padding: 0;
+  margin: 0;
+  outline: none;
+  border: 0;
+  resize: none;
 }
 .expanded_view_squirrels {
   display: inline-block;
