font-family on textarea

--- a/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
+++ b/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
@@ -37,6 +37,8 @@
   outline: none;
   border: 0;
   resize: none;
+  font-family: 'rennerbook', Helvetica, Sans-Serif;
+  font-size: 16px;
 }
 .expanded_view_squirrels {
   display: inline-block;
