visiblity of Zoom on !mapPage + create Icon folder and css + improvement of footer styling

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,6 +10,14 @@
   padding: 12px 0px;
 }
 
+.bottom-right-panel-not-map {
+  box-shadow: 0px 0px 6px #00000038;
+}
+
+.view-mode-icons {
+  margin-left: 24px;
+}
+
 .view-mode-icons img {
   margin-right: 24px;
 }
