make DatePicker open and close and use PickerTemplate

--- a/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
+++ b/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
@@ -51,7 +51,11 @@
 }
 
 .timeframe-wrapper {
-  position: realtive;
+  position: relative;
+}
+
+.timeframe-wrapper .picker-popup {
+  top: 25px;
 }
 
 
