--- a/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
+++ b/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
@@ -5,8 +5,9 @@
 
 .expanded_view_title {
   margin-bottom: 20px;
-  font-size: 24px;
+  font-size: 22px;
   color: #4d4d4d;
+  padding: 4px 0;
 }
 
 .expanded_view_title input {
@@ -14,9 +15,20 @@
   outline: none;
   border: none;
   color: #4d4d4d;
-  font-size: 24px;
+  font-size: 22px;
   padding: 0;
   font-family: 'rennerbook', Helvetica, Sans-Serif;
+}
+
+.expanded_view_title textarea {
+  width: 100%;
+  outline: none;
+  border: none;
+  color: #4d4d4d;
+  font-size: 22px;
+  padding: 0;
+  font-family: 'rennerbook', Helvetica, Sans-Serif;
+  resize: none;
 }
 
 .expanded_view_tags {
@@ -39,7 +51,7 @@
   border: 0;
   resize: none;
   font-family: 'rennerbook', Helvetica, Sans-Serif;
-  font-size: 16px;
+  font-size: 14px;
 }
 
 .expanded_view_squirrels {
