switch icon render style to be able to set hover colors and css colors

--- a/src/components/HierarchyPicker/HierarchyPicker.css
+++ b/src/components/HierarchyPicker/HierarchyPicker.css
@@ -34,7 +34,7 @@
   padding: 0 1rem;
 }
 
-.hierarchy_option_icon_container img {
+.hierarchy_option_icon_container .icon {
   width: 30px;
   height: 30px;
   margin-right: 1rem;
