--- a/src/components/ExpandedViewMode/RightMenu/RightMenu.css
+++ b/src/components/ExpandedViewMode/RightMenu/RightMenu.css
@@ -5,7 +5,7 @@
     margin-top: 0.5px;
 }
 
-.expanded_view_right_menu > img {
+.expanded_view_right_menu > .icon {
   margin-top: -1px;
   width: 50px;
   border: 1px solid #e6e6e6;
@@ -15,7 +15,7 @@
 }
 
 
-.expanded_view_right_menu > img:hover, .expanded_view_right_menu > img.active {
+.expanded_view_right_menu > .icon:hover, .expanded_view_right_menu > .icon.active {
   background: #5F65FF;
   width: 58px;
   margin-left: -8px;
