--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -49,7 +49,7 @@
   align-items: center;
 }
 
-.current-canvas-content img {
+.current-canvas-content .icon {
   margin-right: 10px;
 }
 
@@ -112,7 +112,7 @@
   align-items: center;
 }
 
-.stop-right-panel div img {
+.stop-right-panel div .icon {
   width: 100%;
   display: block;
 }
@@ -149,7 +149,7 @@
   z-index: -1;
 }
 
-.guidebook_open_help img {
+.guidebook_open_help .icon {
   max-width: 70px;
   padding-bottom: 5px;
   padding-left: 10px;
@@ -177,7 +177,7 @@
 
 /* profile section on header */
 
-.top-right-panel>img, .top-right-panel>div {
+.top-right-panel>.icon, .top-right-panel>div {
   width: 36px;
   height: 36px;
   margin: 0px;
@@ -221,7 +221,7 @@
   color: #5F65FF;
 }
 
-.profile-wrapper button img {
+.profile-wrapper button .icon {
   border-radius: 50%;
   height: 16px;
   width: 16px;
@@ -271,19 +271,19 @@
   background-color: #D1D1D1;
 }
 
-button.green img {
+button.green .icon {
   background-color: #00D0C0;
 }
 
-button.purple img {
+button.purple .icon {
   background-color: #5F65FF;
 }
 
-button.yellow img {
+button.yellow .icon {
   background-color: #FFC400;
 }
 
-button.gray img {
+button.gray .icon {
   background-color: #D1D1D1;
 }
 
@@ -356,7 +356,7 @@ button.gray img {
   align-items: center;
 }
 
-.user-status-wrapper button img {
+.user-status-wrapper button .icon {
   border-radius: 50%;
   height: 16px;
   width: 16px;
