--- a/src/components/Icon/Icon.css
+++ b/src/components/Icon/Icon.css
@@ -2,9 +2,28 @@
 
 .icon {
   width: 40px;
+  height: 40px;
   box-sizing: border-box;
   padding: 6px;
   cursor: pointer;
+}
+
+.inner-icon {
+  /* default: black */
+  background-color: #000000;
+  mask-repeat: no-repeat;
+  mask-position: center;
+  mask-size: contain;
+  width: 100%;
+  height: 100%;
+}
+
+.icon.grey .inner-icon {
+  background-color: #333333;
+}
+
+.icon.white .inner-icon {
+  background-color: #FFFFFF;
 }
 
 .icon.very-small {
