--- a/src/components/Zoom/Zoom.css
+++ b/src/components/Zoom/Zoom.css
@@ -5,7 +5,7 @@
   border-right: 1px solid #D9D9D9;
 }
 
-.zoom-wrapper img, span{
+.zoom-wrapper .icon, span{
   display: inline-block;
 }
 
@@ -17,7 +17,7 @@
   width: 44px;
 }
 
-.zoom-wrapper img.icon {
+.zoom-wrapper .icon {
   margin-right: 24px;
   box-sizing: border-box;
 }
