--- a/src/components/ProfileEditForm/ProfileEditForm.css
+++ b/src/components/ProfileEditForm/ProfileEditForm.css
@@ -6,7 +6,7 @@
   margin: 0 auto;
 }
 
-.profile_edit_form .close_icon {
+.profile_edit_form .small-close {
   position: absolute;
   top: 30px;
   right: 30px;
