--- a/src/components/Comments/Comments.css
+++ b/src/components/Comments/Comments.css
@@ -2,20 +2,26 @@
   position: absolute;
   top: 277px;
   left: 36px;
+  overflow-y: scroll;
+  height: 200px;
 }
 .comment {
-  width: 250px;
+  width: 400px;
   display: flex;
   flex-wrap: nowrap;
 }
 .comment > div:last-child {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 .info {
   width: 70%;
   display: flex;
   flex-wrap: nowrap;
+}
+.info span {
+  margin: 0px 3px;
 }
 
 .avatar_comment_container {
