--- a/src/components/Priority/Priority.css
+++ b/src/components/Priority/Priority.css
@@ -1,6 +1,5 @@
 .priority_wrapper {
-  width: 320px;
-  height: 400px;
+  width: 300px;
 }
 
 .priority_tabs {
@@ -10,6 +9,7 @@
   margin-bottom: 10px;
   justify-content: space-around;
   border-bottom: 1px solid #E8E8E8;
+  font-size: 14px;
 }
 
 .priority_tab {
@@ -64,6 +64,7 @@
 .priority_wrapper_button {
   padding: 16px 40px;
   text-align: center;  
+  margin-bottom: 4px;
 }
 
 .priority_wrapper_footer {
@@ -72,7 +73,7 @@
   color: #898989;
   font-size: 12px;
   align-items: center;
-  padding-top: 8px;
+  height: 20px;
 }
 
 .priority_wrapper_footer .icon {
@@ -80,5 +81,6 @@
 }
 
 .my_vote_info {
-float: right;
+  float: right;
+  height: 20px;
 }
