--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -130,8 +130,9 @@
   background-color: #FFFFFF;
   padding: 40px 30px 20px 30px;
   box-shadow: 0px 0px 6px #00000029;
-  width: 500px;
-  min-height: 80%;
+  width: 420px;
+  min-height: 400px;
+  max-height: calc(100vh - 120px);
 }
 
 /* guidebook text and arrow help to open */
@@ -150,7 +151,7 @@
   z-index: -1;
 }
 
-.guidebook_open_help .icon {
+.guidebook_open_help img {
   max-width: 70px;
   padding-bottom: 5px;
   padding-left: 10px;
