--- a/src/components/HierarchyPicker/HierarchyPicker.css
+++ b/src/components/HierarchyPicker/HierarchyPicker.css
@@ -1,47 +1,82 @@
-.hierarchies_picker {
-  width: 300px;
+.hierarchy_picker {
+  min-width: 253px;
 }
 
-.hierarchy_option {
-  width: 100%;
-  margin-bottom: 1rem;
+.hierarchy_option_container {
+  color:#4D4D4D;
+  padding: 8px 20px;
   display: flex;
   align-items: center;
   cursor: pointer;
 }
 
-.hierarchy_option:last-child {
-  margin-bottom: 0;
+.hierarchy_option_container:hover {
+  background: #F2F2F2;
+  color: #00A599;
 }
 
-.hierarchy_option:hover {
-  color: #00a599;
+.hierarchy_option_container:hover .inner-icon {
+  background-color: #00A599;
 }
-.hierarchy_option.active {
-  color: #5f65ff !important;
+
+.hierarchy_option_container:hover .redio_button {
+  background-color: #D1D1D1;
 }
-.hierarchy_option.active > span {
-  border: 1px solid #5f65ff;
-  width: 17px;
-  height: 17px;
-  border-radius: 50%;
+
+.hierarchy_option_container .icon:not(.not-hoverable):hover .inner-icon {
+  background-color: #00A599;
+}
+
+.hierarchy_option_container .icon:hover .inner-icon {
+  background-color: #D1D1D1;
+}
+
+.hierarchy_option_name {
+  flex: 1;
+  padding: 1px 0px;
+  font-family: 'renner_mediummedium', Helvetica, sans-serif;
+  font-size: 14px;
+}
+
+.hierarchy_option_item.active .hierarchy_option_name {
+  color: #5f65ff;
+}
+
+.hierarchy_option_item.active .inner-icon {
+  background-color: #5f65ff;
+}
+
+.hierarchy_option_item:hover .redio_button {
+  background-color: #D1D1D1;
+}
+
+.hierarchy_option_item {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+}
+
+.hierarchy_option_item li {
+  color: #4D4D4D;
+  padding: 6px 20px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  cursor: pointer;
 }
 
-.hierarchy_content_wrapper {
-  padding: 0 1rem;
+.hierarchy_option_item li:hover {
+  background: #F2F2F2;
+  color: #00A599;
 }
 
-.hierarchy_option_icon_container .icon {
-  width: 30px;
-  height: 30px;
-  margin-right: 1rem;
+.hierarchy_option.active {
+  color: #5f65ff;
 }
+
 
 .hierarchy_option_content {
-  flex-grow: 1;
+  margin-left: 10px;
 }
 
 .hierarchy_option_content > span {
@@ -49,6 +84,19 @@
   width: 100%;
 }
 
-.gray-text {
-  color: #a3a3a3;
+.hierarchy_description {
+  font-size: 12px;
+  color: #A3A3A3;
+  font-family: 'rennerbook', Helvetica, sans-serif;
+}
+
+.radio_button {
+  right: 20px;
+  position: absolute;
+}
+
+.hierarchy_wrapper_footer {
+  color:#898989;
+  font-size: 12px;
+  padding: 6px 20px;
 }
