--- a/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
+++ b/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
@@ -42,6 +42,7 @@
   padding-bottom: 20px;
   font-size: 14px;
 }
+
 .expanded_view_description textarea {
   width: 100%;
   height: 240px;
@@ -57,6 +58,8 @@
 .expanded_view_squirrels_title, .expanded_view_timeframe_title {
   margin-bottom: 8px;
 }
+
+/* squirrels section */
 
 .expanded_view_squirrels_wrapper {
   width: 50%;
@@ -76,14 +79,74 @@
   margin-right: 6px;
 }
 
+.expanded_view_squirrels_content .avatar.medium.clickable:hover {
+  box-shadow: 0 0 0 2px #5F65FF;
+}
+
 .add_squirrel_plus_icon {
   background: #F4F4F4;
   border-radius: 50%;
 }
 
 .icon.medium.add_squirrel_plus_icon {
-  padding: 7px;
+  padding: 8px;
 }
+
+.icon.medium.add_squirrel_plus_icon:hover {
+  box-shadow: 0 0 0 2px #5F65FF;
+}
+
+/* squirrelInfoPopup */
+
+.squirrel-info-popup-wrapper {
+  margin-top: 60px;
+  position: absolute;
+  border-radius: 10px;
+  background: #FFFFFF;
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.16);
+  padding: 15px 20px;
+  top: 0;
+  z-index: 1;
+}
+
+.squirrel-info-popup-name {
+  flex: 1;
+  padding: 1px 0px;
+  font-family: 'renner_mediummedium', Helvetica, sans-serif;
+  font-size: 14px;
+  color: #5F65FF;
+  margin-bottom: 6px;
+  cursor: pointer;
+}
+
+.squirrel-info-popup-nameANDhandle {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 12px;
+  margin-bottom: 6px;
+  border-bottom: 1px solid #F2F2F2;
+}
+
+.squirrel-info-popup-handle {
+  font-size: 12px;
+  color: #A3A3A3;
+  font-family: 'rennerbook', Helvetica, sans-serif;
+}
+
+.remove-squirrel-btn {
+  color: #00beb0;
+  font-size: 12px;
+  padding-top: 6px;
+  font-family: 'renner_mediummedium', Helvetica, sans-serif;
+  cursor: pointer;
+}
+
+.remove-squirrel-btn:hover {
+  color: #5F65FF;
+}
+
+
+/* timeframe section */
 
 .expanded_view_timeframe_display {
   background: #F2F2F2;
