improved stlying for register page in small sreen sizes + added Gilroy font

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -64,30 +64,25 @@
 
 .logo p {
   text-align: left;
-  letter-spacing: 0;
-  color: black;
-  margin-top: -12px;
+  letter-spacing: 0.1px;
+  color: #2b2b2b;
+  margin-top: -2px;
+  font-family: 'gilroyextrabold', Helvetica, sans-serif;
+  cursor: default;
 }
 
 .canvas-name {
-  font-family: 'quebecregular', Helvetica, Sans-Serif;
+  font-family: 'renner_mediummedium', Helvetica, Sans-Serif;
   font-weight: normal;
   font-size: 18px;
-  margin-bottom: 7px;
   margin-right: 20px;
+  color: #4d4d4d;
 }
 
 .divider-line {
   border-right: 1px solid #D9D9D9;
   height: 24px;
   margin-right: 16px;
-}
-
-.logo p {
-  text-align: left;
-  letter-spacing: 0;
-  color: black;
-  margin-top: -10px;
 }
 
 .logo-name {
