--- a/src/components/GuideBook/GuideBook.css
+++ b/src/components/GuideBook/GuideBook.css
@@ -11,7 +11,7 @@
   text-align: center;
   margin-bottom: 30px;
   font-size: 18px;
-  font-family: 'rennerbold', Helvetica, sans-serif;
+  font-family: 'gilroyextrabold', Helvetica, sans-serif;
   font-weight: normal;
   margin-top: -2px;
 }
