--- a/src/components/ProfileEditForm/ProfileEditForm.css
+++ b/src/components/ProfileEditForm/ProfileEditForm.css
@@ -22,7 +22,7 @@
   font-size: 20px;
   line-height: 24px;
   color: #222222;
-  font-family: 'rennerbold'
+  font-family: 'rennerbold';
 }
 
 .profile_edit_form h4 {
