--- a/src/components/PriorityQuadrant/PriorityQuadrant.css
+++ b/src/components/PriorityQuadrant/PriorityQuadrant.css
@@ -16,22 +16,21 @@
   margin-left: 16px;
 }
 
-.priority-quadrant-title.urgent-important {
-  color: #FF5D36;
+.priority-quadrant-title.top-left {
+  color: #ff5d36;
 }
-.priority-quadrant-title.less-urgent-important {
-  color: #00BCAE;
+.priority-quadrant-title.top-right {
+  color: #00bcae;
 }
-.priority-quadrant-title.urgent-less-important {
-  color: #FF9C39;
+.priority-quadrant-title.bottom-left {
+  color: #ff9c39;
   margin-top: 20px;
 }
-.priority-quadrant-title.less-urgent-less-important {
-  color: #6DB7CE;
+.priority-quadrant-title.bottom-right {
+  color: #6db7ce;
   margin-top: 20px;
 }
 
 .priority-quadrant-goals {
   overflow-y: scroll;
 }
-
