--- a/src/components/Comments/Comments.css
+++ b/src/components/Comments/Comments.css
@@ -33,7 +33,7 @@
   margin-bottom: 20px;
 }
 .input_comment {
-  width: 350px;
+  width: 343px;
   border: 1px solid #d1d1d1;
   border-radius: 10px;
   padding: 15px;
@@ -41,6 +41,7 @@
   padding: 4px;
   outline: 0;
   box-shadow: none;
+  margin-top: 5px;
   margin-bottom: 15px;
 }
 .avatar_comment_container {
@@ -50,6 +51,7 @@
   width: 50px;
   height: 35px;
   border-radius: 50%;
+  margin-right: 10px;
 }
 .date {
   color: #a3a3a3;
