--- a/src/components/ExpandedViewMode/RightMenu/RightMenu.css
+++ b/src/components/ExpandedViewMode/RightMenu/RightMenu.css
@@ -4,10 +4,11 @@
 }
 
 .expanded_view_right_menu {
-    background: #ffffff;
-    display: flex;
-    flex-direction: column;
-    margin-top: 0.5px;
+  background: #ffffff;
+  display: flex;
+  flex-direction: column;
+  margin-top: 0.5px;
+  position: relative;
 }
 
 .expanded_view_right_menu > .icon {
@@ -19,27 +20,18 @@
   height: 46px;
 }
 
-
-.expanded_view_right_menu > .icon:hover, .expanded_view_right_menu > .icon.active {
-  background: #5F65FF;
+.expanded_view_right_menu > .icon:hover,
+.expanded_view_right_menu > .icon.active {
+  background: #5f65ff;
   width: 58px;
   margin-left: -8px;
   box-shadow: 0px 0px 6px #00000029;
   border-radius: 10px 0px 0px 10px;
   border: none;
   z-index: 1;
-  transition: all .2s;
+  transition: all 0.2s;
 }
 
-.expanded_view_right_menu .people_picker.picker-popup {
-  top: 103px;
-  right: -261px;
-}
-
-.expanded_view_right_menu .priority_wrapper.picker-popup {
-  right: -328px;
-}
-
-.expanded_view_right_menu .date_picker_wrapper.picker-popup {
-  right: -328px;
+.expanded_view_right_menu .picker-popup {
+  left: 60px;
 }
