--- a/src/components/PriorityQuadrant/PriorityQuadrant.css
+++ b/src/components/PriorityQuadrant/PriorityQuadrant.css
@@ -1,9 +1,9 @@
 .priority-quadrant {
-  background: white;
-  width: 50%;
   display: flex;
   flex-direction: column;
-  margin-left: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 100%;
 }
 
 .priority-quadrant-title {
