--- a/src/components/ExpandedViewMode/ExpandedViewModeContent/ActivityHistory/ActivityHistory.css
+++ b/src/components/ExpandedViewMode/ExpandedViewModeContent/ActivityHistory/ActivityHistory.css
@@ -1,32 +1,38 @@
+.history-Body-Container {
+  display: flex;
+  margin-bottom: 10px;
+}
+
 .history {
   padding: 10px;
   margin: 20px 30px;
   color: rgb(0, 0, 0);
 }
+.history-Body-Avatar {
+  width: 10%;
+}
 
-/* .history {
-  display: flex;
-} */
 .history-Author {
-  margin: 0 15px 0 0;
+  margin: 0;
+  color: #4e566f;
+  font-weight: 600;
 }
-.history-Content {
-  display: flex;
+.history-Comment {
+  color: #4e566f;
+  margin: 0;
 }
-/* .history-Pic {
-  display: flex;
-  max-width: 45px;
-  max-height: 45px;
-} */
+
 .history-Header {
   display: flex;
   align-items: center;
 }
 .history-Body {
-  max-width: 580px;
+  width: 80%;
   overflow-wrap: break-word;
 }
 
 .history-Date {
-  color: #787878;
+  font-size: x-small;
+  color: #a3a3a3;
+  opacity: 1;
 }
